# TwentyOne_SimplerBlackJack

./: CMakeLists.txt  README.md  main.cpp
include/: deck.h  game.h  player.h  ui.h
src/: CMakeLists.txt  deck.cpp  game.cpp  player.cpp  ui.cpp
